Remove overflow bug inside the section-skill

--- a/css/components/main-button.css
+++ b/css/components/main-button.css
@@ -21,7 +21,6 @@
 @media (max-width: 400px) {
     .main-button {        
         padding: 10px 12px;
-        font-size: 18px;
-        margin-left: 15px;
+        font-size: 18px;        
     }
 }
