--- a/css/components/section-skill.css
+++ b/css/components/section-skill.css
@@ -13,7 +13,6 @@
 
 @media (max-width: 400px) {
     .section-skill {
-        padding-left: 10px;
         padding-bottom: 50px;
     }    
 }
